--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2024"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[features]
+default = ["pulseaudio"]
+pulseaudio = ["dep:libpulse-binding", "dep:libpulse-sys", "dep:atomic_float"]
+
 [dependencies]
 anyhow = "1.0"
 winit = "0.30"
@@ -15,3 +19,10 @@ wgpu = "27.0.0"
 pollster = "0.3"
 bytemuck = "1.24.0"
 rand = "0.9.2"
+image = "0.25" 
+clap = { version = "4.5", features = ["derive", "cargo"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+libpulse-binding = { version = "2.30", optional = true }
+libpulse-sys = { version = "1.23", optional = true }
+atomic_float = { version = "1.1", optional = true }
