--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 default = ["pulseaudio"]
-pulseaudio = ["dep:libpulse-binding", "dep:libpulse-sys", "dep:atomic_float"]
+pulseaudio = ["dep:libpulse-binding", "dep:libpulse-sys"]
 
 [dependencies]
 anyhow = "1.0"
@@ -25,4 +25,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 libpulse-binding = { version = "2.30", optional = true }
 libpulse-sys = { version = "1.23", optional = true }
-atomic_float = { version = "1.1", optional = true }
+
+[profile.dev.package.image]
+opt-level = 2
+
+[profile.dev.package.wgpu]
+opt-level = 2
